# Matrix_Operations

./: CMakeLists.txt  README.md  add.c  add.h  main.c  matrix.h  multiply.c  multiply.h  print.c  print.h  reading.c  reading.h  vec_add.c  vec_add.h  vec_main.c  vec_multiply.c  vec_multiply.h
Random Matrices/: add100x100.txt  add100x100generator.m  add10x10withcommas.m  add10x10withcommas.txt  add200x200.txt  add200x200generator.m  add500x500.txt  add500x500generator.m  multiply100x200.m  multiply100x200.txt  multiply200x400.m  multiply200x400.txt  multiply500x1000.m  multiply500x1000.txt
ara_scalar/: CMakeLists.txt  add.c  main.c  multiply.c  print.c  print.h  reading.c  reading.h
ara_vectorized/: add.c  add.h  main.c  multiply.c  multiply.h  print.c  print.h  reading.c  reading.h
include/: matrix.h
include/scalar/: add.h  multiply.h
include/vector/: add.h  multiply.h
scr/: print.c
scr/scalar/: add.c  multiply.c
scr/vector/: add.c  main.c  multiply.c
vectorized/: matrix.h  vec_add.c  vec_add.h  vec_multiply.c  vec_multiply.h
